--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@web3modal/ethereum": "^2.2.0",
+    "@web3modal/react": "^2.2.0",
+    "ethers": "^5.7.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "wagmi": "^0.12.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "startw": "set \"GENERATE_SOURCEMAP=false\" && react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
